--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link active">Home</a>
                 <a href=" " class="nav-item nav-link">About</a>
-                <a href=" " class="nav-item nav-link">Services</a>
+                <a href="#services" class="nav-item nav-link">Services</a>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
                 <a>
                 <button  onclick="toggleLogin()"  class="nav-item nav-link-l">LOGIN<i class="fa fa-arrow-right ms-3"></i></button>
@@ -131,6 +131,7 @@
             </button>
         </div>
     </div>
+    <br>
     <!-- Carousel End -->
 
 
@@ -167,6 +168,7 @@
 
 
     <!-- Services Start -->
+    <div id="services">
     <div class="container-xxl service py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
@@ -206,6 +208,8 @@
             
     </div>
     </div>
+</div>
+
     <!-- Services End -->
 
 
